--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   html: ^0.13.3+3
   http: ^0.12.0
+  webview_flutter: ^0.3.22+1
 
 dev_dependencies:
   flutter_test:
