--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   html: ^0.13.3+3
   http: ^0.12.0
   webview_flutter: ^0.3.22+1
+  shared_preferences: ^0.5.8
 
 dev_dependencies:
   flutter_test:
