--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - images/
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
