--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^0.12.0
   webview_flutter: ^0.3.22+1
   shared_preferences: ^0.5.8
+  path_provider: ^1.6.11
 
 dev_dependencies:
   flutter_test:
