--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   webview_flutter: ^0.3.22+1
   shared_preferences: ^0.5.8
   path_provider: ^1.6.11
+  url_launcher: ^5.5.0
+  share: ^0.6.4+3
 
 dev_dependencies:
   flutter_test:
